--- a/20220710_Introduction/css/hl.css
+++ b/20220710_Introduction/css/hl.css
@@ -61,3 +61,11 @@
   color: #D5C4A1;
   /* text-shadow: 0 0 20px #FBF1C7; */
 }
+
+.footnote {
+  position: absolute;
+  bottom: 1em;
+  margin-bottom: -0.29em;
+  font-size: 90%;
+  color: #EB6841aa;
+}
