--- a/20220710_Introduction/css/xaringan-themer.css
+++ b/20220710_Introduction/css/xaringan-themer.css
@@ -48,13 +48,13 @@
   --text-color: #272822;
   --header-color: #1c5253;
   --background-color: #FFFFFF;
-  --link-color: #1c5253;
+  --link-color: #26A69A;
   --text-bold-color: #1c5253;
   --code-highlight-color: rgba(255,255,0,0.5);
   --inverse-text-color: #FFFFFF;
   --inverse-background-color: #1c5253;
   --inverse-header-color: #EBDBB2;
-  --inverse-link-color: #1c5253;
+  --inverse-link-color: #D69B81;
   --title-slide-background-color: #1c5253;
   --title-slide-text-color: #EBDBB2;
   --header-background-color: #1c5253;
@@ -118,7 +118,7 @@ strong {
 }
 a, a > code {
   color: var(--link-color);
-  text-decoration: none;
+  text-decoration: underline;
 }
 .footnote {
   position: absolute;
